# kairosdb-proxy

./: .gitignore  Cargo.toml  README.md  VERSIONING.md  docker-compose.yml
.github/workflows/: ci.yml  integration-tests.yml  release.yml
deployment/helm/: Chart.yaml  README.md  config.toml  values.yaml
deployment/helm/templates/: NOTES.txt  configmap.yaml  deployment.yaml  service.yaml
kairos-proxy/: .dockerignore  Cargo.toml  Dockerfile  README.md  config.toml.example
kairos-proxy/.github/workflows/: ci.yml
kairos-proxy/src/: config.rs  main.rs  proxy.rs  query_metric.rs  query_metric_tags.rs  state.rs
tests/: README.md  launch_mock_servers.py  mock_kairosdb_server.py  requirements.txt  test_config.toml  test_integration.py
