[package]
name = "kairos-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["macros", "json"] }
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "time", "signal"] }
reqwest = { version = "0.11", features = ["json", "gzip", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["trace", "cors", "request-id", "limit"] }
hyper = "0.14"
anyhow = "1.0"
bytes = "1.4"
futures = "0.3"
